# memgrep

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md
.github/workflows/: build.yaml  tag.yaml
doc/: COPYING.hyperscan
src/: main.rs  matcher.rs
