[package]
name = "memgrep"
version = "1.1.1"
authors = ["Erkki Seppälä <flux@inside.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.3.9"
lazy_static = "1.4.0"
regex = "1.3.9"
memmap = "0.7.0"
clap = "3.0.0-beta.2"
rayon = "1.3.0"
thiserror = "1.0.22"
hyperscan = { version = "0.2", features = ["static"] }

[build-dependencies]
vergen = "3"
