[package]
name = "memgrep"
version = "1.2.2"
authors = ["Erkki Seppälä <flux@inside.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.3.9"
lazy_static = "1.5.0"
regex = "1.11.1"
memmap = "0.7.0"
clap = "3.2.25"
rayon = "1.10.0"
thiserror = "1.0.69"
hyperscan = { version = "0.2", features = ["static"] }
anyhow = "1.0.98"

[build-dependencies]
vergen = "3"
